--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 amqp==2.6.1
 appdirs==1.4.4
 asgiref==3.2.10
+astroid==2.4.2
 billiard==3.6.3.0
 celery==4.4.7
 celery-progress==0.0.10
@@ -9,6 +10,7 @@ chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 distlib==0.3.1
+dj-database-url==0.5.0
 Django==3.1
 django-celery-beat==2.0.0
 django-celery-results==1.2.1
@@ -17,10 +19,11 @@ django-compositekey==1.5.0
 django-crispy-forms==1.9.2
 django-debug-toolbar==2.2
 django-filter==2.3.0
+django-heroku==0.3.1
 django-rest-swagger==2.2.0
 django-timezone-field==4.0
 django-widget-tweaks==1.4.8
-djangorestframework==3.11.0
+djangorestframework==3.11.1
 drf-yasg==1.17.1
 filelock==3.0.12
 flower==0.9.5
@@ -33,7 +36,7 @@ inflection==0.5.0
 isort==5.3.2
 itypes==1.2.0
 Jinja2==2.11.2
-kombu==4.6.11
+kombu==5.0.0
 lazy-object-proxy==1.5.1
 MarkupSafe==1.1.1
 mccabe==0.6.1
@@ -42,8 +45,10 @@ packaging==20.4
 Pillow==7.2.0
 pipenv==2020.6.2
 prometheus-client==0.8.0
+psycopg2==2.8.5
 pydevd-pycharm==202.6397.98
 Pygments==2.6.1
+pylint==2.5.3
 pyparsing==2.4.7
 python-crontab==2.5.1
 python-dateutil==2.8.1
@@ -65,5 +70,3 @@ virtualenv==20.0.30
 virtualenv-clone==0.5.4
 whitenoise==5.2.0
 wrapt==1.12.1
-dj-database-url==0.5.0
-django-heroku==0.3.1
