--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ django-heroku==0.3.1
 django-rest-swagger==2.2.0
 django-timezone-field==4.0
 django-widget-tweaks==1.4.8
-djangorestframework==3.11.1
+djangorestframework
 drf-yasg==1.17.1
 filelock==3.0.12
 flower==0.9.5
@@ -47,7 +47,7 @@ pipenv==2020.6.2
 prometheus-client==0.8.0
 psycopg2==2.8.5
 pydevd-pycharm==202.6397.98
-Pygments==2.6.1
+Pygments
 pylint==2.5.3
 pyparsing==2.4.7
 python-crontab==2.5.1
